--- a/resources/Client/css/styles.css
+++ b/resources/Client/css/styles.css
@@ -1,8 +1,8 @@
 body {
-    background-color: navy;
-    margin: 0;
-    font-family: 'Arial', serif;
-}
+     background-color: lightgrey;
+     margin: 0;
+     font-family: 'New Times Roman', serif;
+ }
 
 h1 {
     margin-top:0;
@@ -14,4 +14,20 @@ h1 {
     margin: 0 auto;
     min-height: 600px;
     padding: 32px;
+}
+
+
+.box{
+    width:100px;
+    height:100px;
+}
+
+.red{
+    background:#f00;
+}
+.green{
+    background:#0f0;
+}
+.blue{
+    background:#00f;
 }
