--- a/resources/Client/css/styles.css
+++ b/resources/Client/css/styles.css
@@ -1,24 +1,8 @@
+@charset "UTF-8";
 body {
-     background-color: darkgrey;
-     margin: 0;
-     font-family: 'New Times Roman', serif;
- }
-
-h1 {
-    margin-top:0;
-}
-
-#content {
-    background-color: white;
-    width: 1000px;
-    margin: 0 auto;
-    min-height: 600px;
-    padding: 32px;
+    background-color: grey;
 }
 
 
-.box{
-    width:100px;
-    height:100px;
-}
+
 
