--- a/resources/client/css/styles.css
+++ b/resources/client/css/styles.css
@@ -62,7 +62,52 @@ body{
     margin-left:0%;
 }
 
+loginDiv {
+    font-size: 14pt;
+    margin-top: 40px;
+    margin-left: 20px;
+}
 
+#username, #password {
+    margin-left: 20px;
+    font-size: 14pt;
+}
+
+#loginButton {
+    width: 200px;
+    background-color: cornflowerblue;
+}
+
+#loginButton:hover {
+    background-color: dodgerblue;
+}
+
+#loggedInDetails {
+    margin: 0;
+    text-align: right;
+    display: inline;
+    float: right
+}
+
+.deleteButton, #cancelButton {
+    visibility: hidden;
+    background-color: indianred;
+    margin-left: 10px;
+}
+
+.editButton {
+    visibility: hidden;
+    background-color: silver;
+}
+
+
+.editButton, .deleteButton, #saveButton, #cancelButton, #loginButton {
+    color: black;
+    font-size: 14px;
+    border: none;
+    padding: 8px;
+    border-radius: 8px;
+}
 
 
 
