--- a/resources/client/css/styles.css
+++ b/resources/client/css/styles.css
@@ -16,7 +16,7 @@ body{
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: black;
     overflow: hidden;
 }
 
@@ -25,7 +25,7 @@ body{
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 40px 16px;
     text-decoration: none;
     font-size: 17px;
 }
@@ -135,5 +135,28 @@ loginDiv {
     border-radius: 8px;
 }
 
+#selection1{
+    color:white;
+    font-size: 14px;
+    padding: 8px;
+    border-radius: 8px
+}
 
+#selection2{}
+
+#selection3{}
+
+#selection4{}
+
+#selection5{}
+
+#selection6{}
+
+#selection7{}
+
+#selection8{}
+
+#selection9{}
+
+#selection10{}
 
